# cryptpass

./: .dockerignore  .gitignore  .gitleaks.toml  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  ansible.cfg  build.rs  buildkitd.toml  docker-push.sh  gitleaks.toml  openapi.json  openapi.yaml  openapi.yml  pyproject.toml
.devcontainer/: devcontainer.Dockerfile  devcontainer.json
.github/files/: build.sh  package-lock.json  release.config.cjs
.github/workflows/: release.yml  test.yml
ansible/: bitwarden-client.py  deploy.sh  inventory.yaml  inventory.yml  playbook.yaml  playbook.yml  vault_pass.sh
docs/: Configuration.md  Development.md  Installation.md  OpenAPI.yaml
docs/Concepts/: Initialize_and_Unlock.md
migrations/2025-05-29-163645_user_kv/: down.sql  up.sql
migrations/v1/: down.sql  up.sql
src/: authentication.rs  config.rs  configuration.rs  error.rs  gen_openapi.rs  init.rs  main.rs
src/auth/: mod.rs  roles.rs  root.rs
src/enc/: aes256.rs  mod.rs
src/encryption/: aes256.rs  mod.rs
src/error/: macros.rs  mod.rs
src/physical/: libsql_store.rs  mod.rs  models.rs  schema.rs
src/routers/: admin.rs  authentication.rs  correlation_id.rs  fallback.rs  health.rs  kv.rs  logging.rs  login_auth.rs  mod.rs  print_request_response.rs  printer.rs  secret.rs  secrets.rs  unlock.rs
src/routers/api/: mod.rs
src/routers/api/v1/: admin_router.rs  keyvalue.rs  keyvalue_router.rs  mod.rs  users.rs
src/routers/perpetual/: health.rs  init.rs  login_auth.rs  mod.rs  unlock.rs
src/routers/perpetual/auth/: layer.rs  login.rs  mod.rs
src/services/: encryption.rs  key_value.rs  kv.rs  mod.rs  users.rs
src/utils/: aes256.rs  mod.rs  sha256.rs
