[package]
name = "cryptpass"
version = "1.0.11"
edition = "2021"
rust-version = "1.86.0"
description = "Manage seed data for my home lab."
license-file = "LICENSE"

[[bin]]
name = "cryptpass"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
aes = "0.8.4"
cbc = "0.1.2"
base64 = "0.22.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
tracing-appender = "0.2.3"
time = { version = "0.3", features = ["formatting", "macros"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
axum-server = { version = "0.7.2", features = [
    "tls-rustls",
    "tls-rustls-no-provider",
] }
http-body-util = "0.1.3"
uuid = { version = "1.17.0", features = ["v4"] }
rand = "0.9.1"
sha2 = { version = "0.10.9", features = ["asm"] }
hex = "0.4.3"
diesel = { version = "2.2.10", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
deadpool-diesel = { version = "0.6.1", features = [
    "sqlite",
    "tracing",
    "serde",
    "rt_tokio_1",
] }
libsqlite3-sys = { version = "0.33.0", features = [
    "bundled",
    "cc",
] } # If this is not present, then the system needs to have libsqlite3-dev installed.
regex = "1.11.1"
