[project]
name = "cryptpass"
version = "0.0.0" # Actual version is tracked in Cargo.toml
description = ""
authors = [{ name = "arpan", email = "arpan.rec@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["ansible (>=11.6.0)", "ansible-lint (>=25.5.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
